--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+ * {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+ }
+
+
 html {
   scroll-behavior: smooth;
 }
@@ -5,7 +12,7 @@ html {
 body {
  font-family: 'Changa', sans-serif;
  overflow-x: hidden;
- margin: 0
+ margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
@@ -49,7 +56,7 @@ h1 {
 
 audio {
   filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
-width: 200px;
+width: 270px;
 height: 25px;
 margin-top: 40px;
 
