--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+
+
  * {
    margin: 0;
    padding: 0;
@@ -57,7 +59,7 @@ h1 {
 audio {
   filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
 width: 270px;
-height: 25px;
+height: 35px;
 margin-top: 40px;
 
 }
@@ -70,6 +72,7 @@ margin-top: 40px;
 #title {
   background-color: #00ab66;
   text-align: center;
+  width: 100%;
 }
 
 
@@ -79,7 +82,7 @@ margin-top: 40px;
   background-color: #ffe4e4;
   padding: 7% 15%;
   text-align: center;
-
+width: 100%;
 }
 
 
@@ -134,6 +137,7 @@ margin-top: 40px;
 @media (max-width: 1265px) and (min-width: 770px) {
   #title {
 text-align: center;
+width: 100%;
  }
 }
 
@@ -162,7 +166,7 @@ text-align: center;
    background-color: #00ab66;
    color: #ffe4e4;
    padding-bottom: 50px;
-
+width: 100%;
  }
 
 .carousel-item {
@@ -193,6 +197,7 @@ text-align: center;
    background-color: #00ab66;
    text-align: center;
    padding-bottom: 3%;
+   width: 100%;
  }
 
  .press-img {
@@ -206,6 +211,7 @@ text-align: center;
    padding: 7% 7%;
    text-align: center;
   background-color: #ffe4e4;
+  width: 100%;
  }
 
  .pricing-col {
@@ -258,6 +264,7 @@ text-align: center;
  @media (max-width: 1028px) {
    #title {
      text-align: center;
+     width: 100%;
    }
  }
 
@@ -270,6 +277,7 @@ text-align: center;
 #contact {
   background-color: #00ab66;
   padding: 7% 15%;
+  width: 100%;
 }
 
 .contact {
@@ -420,6 +428,7 @@ border: none;
   background-color: #ffe4e4;
   text-align: center;
   padding: 7% 15%;
+  width: 100%;
 }
 
 #footer p {
